# preprocessing

./: pyproject.toml
data/processed/: building_underground_water_processed.csv  construction_processed.csv  construction_underground_water_processed.csv  road_construction_processed.csv  subway_depth.csv
data/raw_data/: 서울교통공사_역사심도정보_20241104.csv  서울시 건설 알림이 정보.csv  서울시 건축물 유출지하수 현황.csv  서울시 공사현장 유출지하수 공간정보(2019년).csv  서울시_지반침하_고위험지역_선정_대상.csv  지반침하정보현황(제공표준).csv
data/raw_data/지반침하_위치도/: 지반침하지.dbf  지반침하지.sbn  지반침하지.sbx  지반침하지.shp  지반침하지.shx
docs/: 서울시 건축물 유출지하수 현황.md  서울시 공사현장 유출지하수 공간정보(2019).md  서울시 도로굴착 공사 현황.md  서울시_건설_알림이_정보.md  지반침하_위치도.md
notebooks/: data_preview.ipynb  preprocessing.ipynb
src/: main.py
