[project]
name = "preprocessing"
version = "0.1.0"
description = "싱크홀 고위험 지역 예측 프로젝트 전처리 과정"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
